refactor: note tag